--- a/index.html
+++ b/index.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Abdul Crypto Clicker</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            text-align: center;
-            background: #0d1117;
-            color: #fff;
-            margin-top: 100px;
-        }
-        h1 {
-            font-size: 32px;
-        }
-        h2 {
-            margin: 20px 0;
-        }
-        button {
-            padding: 15px 30px;
-            font-size: 18px;
-            background-color: #1f6feb;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-        button:active {
-            background-color: #388bfd;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Abdul Crypto Clicker</title>
+  <style>
+    body {
+      margin: 0;
+      background: #0d0d0d;
+      color: #fff;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    h1 {
+      margin-top: 20px;
+      font-size: 28px;
+    }
+
+    #balance {
+      font-size: 24px;
+      margin-top: 10px;
+      color: #00ff99;
+    }
+
+    .clicker {
+      margin: 60px auto;
+      width: 160px;
+      height: 160px;
+      background: url('https://cdn-icons-png.flaticon.com/512/825/825454.png') no-repeat center/contain;
+      cursor: pointer;
+      transition: transform 0.1s;
+    }
+
+    .clicker:active {
+      transform: scale(0.9) rotate(-5deg);
+    }
+
+    .btn-send {
+      margin-top: 30px;
+      background: #00cc99;
+      color: #fff;
+      border: none;
+      padding: 12px 24px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn-send:hover {
+      background: #009973;
+    }
+  </style>
 </head>
 <body>
-    <h1>🚀 Abdul Crypto Clicker</h1>
-    <h2>Крипта: <span id="crypto-count">0</span></h2>
-    <button id="click-btn">Клик!</button>
+  <h1>👊 Abdul Crypto Clicker</h1>
+  <div id="balance">💰 Баланс: 0</div>
+  <div class="clicker" id="clicker"></div>
+  <button class="btn-send" onclick="sendData()">📤 Отправить в Telegram</button>
 
-    <script>
-        let count = 0;
+  <audio id="clickSound" src="https://actions.google.com/sounds/v1/human_voices/bleep_short.ogg"></audio>
 
-        const cryptoCount = document.getElementById("crypto-count");
-        const clickButton = document.getElementById("click-btn");
+  <script>
+    let balance = 0;
+    const balanceEl = document.getElementById('balance');
+    const clickSound = document.getElementById('clickSound');
 
-        clickButton.addEventListener("click", () => {
-            count++;
-            cryptoCount.innerText = count;
+    document.getElementById('clicker').addEventListener('click', () => {
+      balance++;
+      balanceEl.textContent = `💰 Баланс: ${balance}`;
+      clickSound.currentTime = 0;
+      clickSound.play();
+    });
 
-            // Отправить данные в Telegram боту
-            if (window.Telegram.WebApp) {
-                Telegram.WebApp.sendData(JSON.stringify({ clicks: count }));
-            }
-        });
+    function sendData() {
+      if (window.Telegram.WebApp) {
+        Telegram.WebApp.sendData(JSON.stringify({ clicks: balance }));
+        Telegram.WebApp.close();
+      } else {
+        alert("❌ Открывай игру через Telegram WebApp.");
+      }
+    }
 
-        Telegram.WebApp.ready();
-    </script>
+    Telegram?.WebApp?.ready?.();
+  </script>
 </body>
 </html>
