--- a/index.html
+++ b/index.html
@@ -1,90 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Abdul Crypto Clicker</title>
-  <style>
-    body {
-      margin: 0;
-      background: #0d0d0d;
-      color: #fff;
-      font-family: 'Arial', sans-serif;
-      text-align: center;
-      overflow: hidden;
-    }
-
-    h1 {
-      margin-top: 20px;
-      font-size: 28px;
-    }
-
-    #balance {
-      font-size: 24px;
-      margin-top: 10px;
-      color: #00ff99;
-    }
-
-    .clicker {
-      margin: 60px auto;
-      width: 160px;
-      height: 160px;
-      background: url('https://cdn-icons-png.flaticon.com/512/825/825454.png') no-repeat center/contain;
-      cursor: pointer;
-      transition: transform 0.1s;
-    }
-
-    .clicker:active {
-      transform: scale(0.9) rotate(-5deg);
-    }
-
-    .btn-send {
-      margin-top: 30px;
-      background: #00cc99;
-      color: #fff;
-      border: none;
-      padding: 12px 24px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .btn-send:hover {
-      background: #009973;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AbdulaClick</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>👊 Abdul Crypto Clicker</h1>
-  <div id="balance">💰 Баланс: 0</div>
-  <div class="clicker" id="clicker"></div>
-  <button class="btn-send" onclick="sendData()">📤 Отправить в Telegram</button>
+  <div class="container">
+    <h1>AbdulaClick</h1>
+    <div class="balance" id="balance">0 💰</div>
+    
+    <button id="clickButton">
+      <img src="bearded.png" alt="Click Icon" class="click-icon">
+    </button>
 
-  <audio id="clickSound" src="https://actions.google.com/sounds/v1/human_voices/bleep_short.ogg"></audio>
+    <div class="shop">
+      <h2>🛒 Магазин бустов</h2>
+      <div class="shop-item" data-cost="10" data-power="1">+1 за 10 💰</div>
+      <div class="shop-item" data-cost="50" data-power="5">+5 за 50 💰</div>
+      <div class="shop-item" data-cost="200" data-power="20">+20 за 200 💰</div>
+    </div>
+  </div>
 
-  <script>
-    let balance = 0;
-    const balanceEl = document.getElementById('balance');
-    const clickSound = document.getElementById('clickSound');
-
-    document.getElementById('clicker').addEventListener('click', () => {
-      balance++;
-      balanceEl.textContent = `💰 Баланс: ${balance}`;
-      clickSound.currentTime = 0;
-      clickSound.play();
-    });
-
-    function sendData() {
-      if (window.Telegram.WebApp) {
-        Telegram.WebApp.sendData(JSON.stringify({ clicks: balance }));
-        Telegram.WebApp.close();
-      } else {
-        alert("❌ Открывай игру через Telegram WebApp.");
-      }
-    }
-
-    Telegram?.WebApp?.ready?.();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
+
