--- a/index.html
+++ b/index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AbdulaClick</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
+    <button id="openShopBtn" class="shop-open-btn">🛒 Магазин</button>
     <h1>AbdulaClick</h1>
     <div class="balance" id="balance">0 💰</div>
-    
-    <button id="clickButton">
-      <img src="bearded.png" alt="Click Icon" class="click-icon">
-    </button>
 
-    <div class="shop">
-      <h2>🛒 Магазин бустов</h2>
-      <div class="shop-item" data-cost="10" data-power="1">+1 за 10 💰</div>
-      <div class="shop-item" data-cost="50" data-power="5">+5 за 50 💰</div>
-      <div class="shop-item" data-cost="200" data-power="20">+20 за 200 💰</div>
+    <button id="clickButton">
+      <img src="bearded.png" alt="Click Icon" class="click-icon" />
+    </button>
+  </div>
+
+  <!-- Магазин (по умолчанию скрыт) -->
+  <div id="shopOverlay" class="shop-overlay hidden">
+    <div class="shop-header">
+      <button id="closeShopBtn" class="back-btn">← Назад</button>
+      <div class="shop-tabs">
+        <button class="tab-btn active" data-tab="boosts">Бусты</button>
+        <button class="tab-btn" data-tab="autoclicks">Автоклики</button>
+        <button class="tab-btn" data-tab="skins">Скинчики</button>
+      </div>
+    </div>
+
+    <div class="shop-content">
+      <div id="boosts" class="tab-content active">
+        <div class="shop-item" data-cost="100" data-power="1">+1 клик за 100 💰</div>
+        <div class="shop-item" data-cost="500" data-power="5">+5 кликов за 500 💰</div>
+        <div class="shop-item" data-cost="2000" data-power="20">+20 кликов за 2000 💰</div>
+      </div>
+
+      <div id="autoclicks" class="tab-content">
+        <div class="shop-item" data-cost="1000" data-power="3">3 автоклика в секунду за 1000 💰</div>
+        <div class="shop-item" data-cost="5000" data-power="10">10 автокликов в секунду за 5000 💰</div>
+      </div>
+
+      <div id="skins" class="tab-content">
+        <p>Скинчики появятся позже 😉</p>
+      </div>
     </div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
