--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="mainScreen">
     <button id="openShopBtn" class="shop-open-btn">🛒 Магазин</button>
     <h1>AbdulaClick</h1>
     <div class="balance" id="balance">0 💰</div>
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Магазин (по умолчанию скрыт) -->
-  <div id="shopOverlay" class="shop-overlay hidden">
+  <div id="shopScreen" class="hidden">
     <div class="shop-header">
       <button id="closeShopBtn" class="back-btn">← Назад</button>
       <div class="shop-tabs">
@@ -49,3 +49,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
