--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </button>
   </div>
 
-  <!-- Магазин (по умолчанию скрыт) -->
   <div id="shopScreen" class="hidden">
     <div class="shop-header">
       <button id="closeShopBtn" class="back-btn">← Назад</button>
@@ -41,7 +40,7 @@
       </div>
 
       <div id="skins" class="tab-content">
-        <p>Скинчики появятся позже 😉</p>
+        <p style="padding: 10px; color: #888;">Скинчики появятся позже 😉</p>
       </div>
     </div>
   </div>
@@ -49,5 +48,4 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
