--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="shopModal" class="modal hidden">
       <div class="modal-content">
         <button class="back" id="closeShop">← Назад</button>
-        <h2>Магазин</h2>
+        <h2 id="shopTitle">Магазин</h2>
         <div id="shopMenu">
           <button class="shop-tab" data-tab="boosts">🔥 Бусты</button>
           <button class="shop-tab" data-tab="autoclick">⚙️ Автоклики</button>
@@ -34,6 +34,8 @@
       </div>
     </div>
   </div>
+
+  <div id="coin-animations"></div>
 
   <script src="script.js"></script>
 </body>
