--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     .click-icon:active {
       transform: scale(0.95);
     }
-    #openShop, #openOwned {
+    #openShop, #openInventory {
       margin-top: 10px;
       padding: 10px 20px;
       background-color: #6b21a8;
@@ -60,11 +60,8 @@
       font-size: 16px;
       cursor: pointer;
       transition: background 0.2s;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
     }
-    #openShop:hover, #openOwned:hover {
+    #openShop:hover, #openInventory:hover {
       background-color: #9333ea;
     }
     .modal {
@@ -103,18 +100,18 @@
     .shop-tab:hover {
       background-color: #6b21a8;
     }
-    .shop-item, .owned-item {
+    .shop-item {
       margin: 10px 0;
       padding: 10px;
       background-color: #2c2c2c;
       border: 2px solid #9333ea;
       border-radius: 10px;
+      cursor: pointer;
       color: #fff;
     }
     .shop-item:hover {
       background-color: #9333ea;
       color: #000;
-      cursor: pointer;
     }
     .back {
       background: none;
@@ -125,14 +122,25 @@
       text-align: left;
       margin-bottom: 10px;
     }
+    .inventory-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 10px 0;
+      background-color: #2c2c2c;
+      border-radius: 10px;
+      padding: 10px;
+    }
     .sell-btn {
-      margin-top: 5px;
-      background-color: #9333ea;
-      color: white;
+      background-color: #dc2626;
       border: none;
+      color: white;
       padding: 5px 10px;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
+    }
+    .sell-btn:hover {
+      background-color: #ef4444;
     }
   </style>
 </head>
@@ -147,7 +155,7 @@
     </button>
     <br />
     <button id="openShop">🛒 Магазин</button>
-    <button id="openOwned">📦 Приобретённые</button>
+    <button id="openInventory">📦 Приобретённые</button>
   </div>
 
   <div id="shopModal" class="modal hidden">
@@ -163,11 +171,11 @@
     </div>
   </div>
 
-  <div id="ownedModal" class="modal hidden">
+  <div id="inventoryModal" class="modal hidden">
     <div class="modal-content">
-      <button class="back" id="closeOwned">← Назад</button>
+      <button class="back" id="closeInventory">← Назад</button>
       <h2>Приобретённые</h2>
-      <div id="ownedContent"></div>
+      <div id="inventoryContent"></div>
     </div>
   </div>
 
@@ -227,6 +235,7 @@
             return;
           }
           if (balance >= item.cost) {
+            if (!confirm(`Купить ${item.label} за ${item.cost} монет?`)) return;
             balance -= item.cost;
             if (tab === "infiniteBoosts") boost += item.power;
             if (tab === "autoclickers") autoclick += item.power;
@@ -237,7 +246,7 @@
                 updateBalance();
               }, 30000);
             }
-            purchasedItems[item.id] = { label: item.label, cost: item.cost, power: item.power, tab };
+            purchasedItems[item.id] = item;
             updateBalance();
             alert(`✅ Куплено: ${item.label}`);
           } else {
@@ -248,24 +257,26 @@
       });
     }
 
-    function createOwnedItems() {
-      const ownedContent = document.getElementById("ownedContent");
-      ownedContent.innerHTML = "";
-
-      Object.entries(purchasedItems).forEach(([id, item]) => {
-        const el = document.createElement("div");
-        el.className = "owned-item";
-        el.innerHTML = `${item.label} <br> <button class='sell-btn'>Продать за ${Math.floor(item.cost / 2)} 💰</button>`;
-        el.querySelector(".sell-btn").onclick = () => {
-          if (item.tab === "infiniteBoosts") boost -= item.power;
-          if (item.tab === "autoclickers") autoclick -= item.power;
-          delete purchasedItems[id];
+    function showInventory() {
+      const invContent = document.getElementById("inventoryContent");
+      invContent.innerHTML = "";
+      for (let key in purchasedItems) {
+        const item = purchasedItems[key];
+        if (key.startsWith("tboost")) continue; // не отображать временные
+        const div = document.createElement("div");
+        div.className = "inventory-item";
+        div.innerHTML = `<span>${item.label}</span><button class="sell-btn">Продать</button>`;
+        div.querySelector(".sell-btn").onclick = () => {
+          if (!confirm(`Продать ${item.label} за ${Math.floor(item.cost / 2)} монет?`)) return;
+          if (key.startsWith("boost")) boost -= item.power;
+          if (key.startsWith("auto")) autoclick -= item.power;
           balance += Math.floor(item.cost / 2);
+          delete purchasedItems[key];
           updateBalance();
-          createOwnedItems();
+          showInventory();
         };
-        ownedContent.appendChild(el);
-      });
+        invContent.appendChild(div);
+      }
     }
 
     document.getElementById("openShop").addEventListener("click", () => {
@@ -276,13 +287,13 @@
       document.getElementById("shopModal").classList.add("hidden");
     });
 
-    document.getElementById("openOwned").addEventListener("click", () => {
-      document.getElementById("ownedModal").classList.remove("hidden");
-      createOwnedItems();
+    document.getElementById("openInventory").addEventListener("click", () => {
+      document.getElementById("inventoryModal").classList.remove("hidden");
+      showInventory();
     });
 
-    document.getElementById("closeOwned").addEventListener("click", () => {
-      document.getElementById("ownedModal").classList.add("hidden");
+    document.getElementById("closeInventory").addEventListener("click", () => {
+      document.getElementById("inventoryModal").classList.add("hidden");
     });
 
     document.querySelectorAll(".shop-tab").forEach(tab => {
