--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>AbdulaClick</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    html, body {
-      touch-action: manipulation;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
     body {
       background-color: #0d0d0d;
       color: #f0f0f0;
@@ -56,7 +50,7 @@
     .click-icon:active {
       transform: scale(0.95);
     }
-    #openShop {
+    #openShop, #openInventory {
       margin-top: 10px;
       padding: 10px 20px;
       background-color: #6b21a8;
@@ -67,7 +61,7 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-    #openShop:hover {
+    #openShop:hover, #openInventory:hover {
       background-color: #9333ea;
     }
     .modal {
@@ -128,6 +122,26 @@
       text-align: left;
       margin-bottom: 10px;
     }
+    .inventory-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 10px 0;
+      background-color: #2c2c2c;
+      border-radius: 10px;
+      padding: 10px;
+    }
+    .sell-btn {
+      background-color: #dc2626;
+      border: none;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .sell-btn:hover {
+      background-color: #ef4444;
+    }
   </style>
 </head>
 <body>
@@ -141,7 +155,163 @@
     </button>
     <br />
     <button id="openShop">🛒 Магазин</button>
+    <button id="openInventory">📦 Приобретённые</button>
   </div>
-  <!-- Остальная часть кода ниже не изменяется -->
+
+  <div id="shopModal" class="modal hidden">
+    <div class="modal-content">
+      <button class="back" id="closeShop">← Назад</button>
+      <h2>Магазин</h2>
+      <div id="shopMenu">
+        <button class="shop-tab" data-tab="infiniteBoosts">♾️ Бесконечные бусты</button>
+        <button class="shop-tab" data-tab="timeBoosts">⏱ Временные бусты</button>
+        <button class="shop-tab" data-tab="autoclickers">⚙️ Автоклики</button>
+      </div>
+      <div id="shopContent"></div>
+    </div>
+  </div>
+
+  <div id="inventoryModal" class="modal hidden">
+    <div class="modal-content">
+      <button class="back" id="closeInventory">← Назад</button>
+      <h2>Приобретённые</h2>
+      <div id="inventoryContent"></div>
+    </div>
+  </div>
+
+  <script>
+    let balance = parseInt(localStorage.getItem("balance")) || 0;
+    let boost = parseInt(localStorage.getItem("boost")) || 1;
+    let autoclick = parseInt(localStorage.getItem("autoclick")) || 0;
+    let purchasedItems = JSON.parse(localStorage.getItem("purchasedItems")) || {};
+
+    const balanceElem = document.getElementById("balance");
+    const clickBtn = document.getElementById("clickButton");
+    const audio = new Audio("click.mp3");
+
+    function updateBalance() {
+      balanceElem.innerText = balance;
+      localStorage.setItem("balance", balance);
+      localStorage.setItem("boost", boost);
+      localStorage.setItem("autoclick", autoclick);
+      localStorage.setItem("purchasedItems", JSON.stringify(purchasedItems));
+    }
+
+    clickBtn.addEventListener("click", () => {
+      balance += boost;
+      updateBalance();
+      audio.currentTime = 0;
+      audio.play();
+    });
+
+    function createShopItems() {
+      const shopContent = document.getElementById("shopContent");
+      shopContent.innerHTML = "";
+
+      const tab = document.querySelector(".shop-tab.active")?.dataset.tab;
+      let items = [];
+
+      if (tab === "infiniteBoosts") {
+        for (let i = 1; i <= 10; i++) {
+          items.push({ id: `boost${i}`, label: `+${i} клик`, cost: i * 200, power: i });
+        }
+      } else if (tab === "timeBoosts") {
+        for (let i = 1; i <= 10; i++) {
+          items.push({ id: `tboost${i}`, label: `+${i} кликов на 30 секунд`, cost: i * 30, power: i });
+        }
+      } else if (tab === "autoclickers") {
+        for (let i = 5; i <= 50; i += 5) {
+          items.push({ id: `auto${i}`, label: `+${i} автокликов`, cost: i * 1000, power: i });
+        }
+      }
+
+      items.forEach(item => {
+        const el = document.createElement("div");
+        el.className = "shop-item";
+        el.innerText = `${item.label} — ${item.cost} 💰`;
+        el.onclick = () => {
+          if (purchasedItems[item.id]) {
+            alert("❌ У вас это уже приобретено");
+            return;
+          }
+          if (balance >= item.cost) {
+            if (!confirm(`Купить ${item.label} за ${item.cost} монет?`)) return;
+            balance -= item.cost;
+            if (tab === "infiniteBoosts") boost += item.power;
+            if (tab === "autoclickers") autoclick += item.power;
+            if (tab === "timeBoosts") {
+              boost += item.power;
+              setTimeout(() => {
+                boost -= item.power;
+                updateBalance();
+              }, 30000);
+            }
+            purchasedItems[item.id] = item;
+            updateBalance();
+            alert(`✅ Куплено: ${item.label}`);
+          } else {
+            alert("❌ Недостаточно монет");
+          }
+        };
+        shopContent.appendChild(el);
+      });
+    }
+
+    function showInventory() {
+      const invContent = document.getElementById("inventoryContent");
+      invContent.innerHTML = "";
+      for (let key in purchasedItems) {
+        const item = purchasedItems[key];
+        if (key.startsWith("tboost")) continue; // не отображать временные
+        const div = document.createElement("div");
+        div.className = "inventory-item";
+        div.innerHTML = `<span>${item.label}</span><button class="sell-btn">Продать</button>`;
+        div.querySelector(".sell-btn").onclick = () => {
+          if (!confirm(`Продать ${item.label} за ${Math.floor(item.cost / 2)} монет?`)) return;
+          if (key.startsWith("boost")) boost -= item.power;
+          if (key.startsWith("auto")) autoclick -= item.power;
+          balance += Math.floor(item.cost / 2);
+          delete purchasedItems[key];
+          updateBalance();
+          showInventory();
+        };
+        invContent.appendChild(div);
+      }
+    }
+
+    document.getElementById("openShop").addEventListener("click", () => {
+      document.getElementById("shopModal").classList.remove("hidden");
+    });
+
+    document.getElementById("closeShop").addEventListener("click", () => {
+      document.getElementById("shopModal").classList.add("hidden");
+    });
+
+    document.getElementById("openInventory").addEventListener("click", () => {
+      document.getElementById("inventoryModal").classList.remove("hidden");
+      showInventory();
+    });
+
+    document.getElementById("closeInventory").addEventListener("click", () => {
+      document.getElementById("inventoryModal").classList.add("hidden");
+    });
+
+    document.querySelectorAll(".shop-tab").forEach(tab => {
+      tab.addEventListener("click", () => {
+        document.querySelectorAll(".shop-tab").forEach(btn => btn.classList.remove("active"));
+        tab.classList.add("active");
+        createShopItems();
+      });
+    });
+
+    if (autoclick > 0) {
+      setInterval(() => {
+        balance += autoclick;
+        updateBalance();
+      }, 1000);
+    }
+
+    updateBalance();
+  </script>
 </body>
 </html>
